# covidcaseaverage

./: Cargo.toml
covidfe/: package-lock.json  package.json
covidfe/src/: App.js  actionTypes.js  actions.js  api.js  configureStore.js  countriesReducer.js  index.js  initialState.js  rootReducer.js
covidfe/src/sagas/: countriesSaga.js  index.js
src/: country.json  main.rs
src/country/: mod.rs
